rules.v4
# Generated by iptables-save v1.8.7 on Mon Nov 6 14:55:50 2023
*filter

:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

# Allow Loopback Connection
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
# End Allow Loopback Connection

# Allow DHCP Connection From Interfaces
-A INPUT -p udp -i enp2s0 --dport 67:68 -j ACCEPT
-A OUTPUT -p udp -o enp2s0 --sport 67:68 -j ACCEPT
# END Allow DHCP Connection From Interfaces

# Allow redis Connection From Interfaces
-A INPUT -i enp2s0 -p tcp --dport 6379 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT
# END Allow redis Connection From Interfaces


# Allow SSH Connection From Interfaces
-A INPUT -i enp2s0 -p tcp --dport 22 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT
# END Allow SSH Connection From Interfaces

# Allow Mysql Connection From Interfaces
-A INPUT -i enp2s0 -p tcp --dport 3306 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT
# END Allow Mysql Connection From Interfaces

# Allow HTTP Source & DNS
-A INPUT -i enp2s0 -p tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -i enp2s0 -p udp --sport 53 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Redirect Accept
-A INPUT -i enp2s0 -p tcp --dport 8081 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT

# Allow HTTP Connection Interfaces
-A INPUT -i wlan0 -p tcp --dport 80 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT
# END Allow HTTP Connection Interfaces

-A INPUT -i enp2s0 -p tcp --syn --dport 80 -m connlimit --connlimit-above 15 --connlimit-mask 32 -j REJECT --reject-with tcp-reset
-A INPUT -i enp2s0 -p tcp --dport 80 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j LOG --log-prefix "## WAN TO PORT 80 (http) - ACCEPT ##"
-A INPUT -i enp2s0 -p tcp --dport 80 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT

-A INPUT -i usb0 -p tcp --dport 80 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT

# Allow HTTPS Connection Interfaces
-A INPUT -i wlan0 -p tcp --dport 443 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT

-A INPUT -i enp2s0 -p tcp --dport 443 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j LOG --log-prefix "## WAN TO PORT 443 (https) - ACCEPT ##"
-A INPUT -i enp2s0 -p tcp --dport 443 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT

-A INPUT -i usb0 -p tcp --dport 443 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT

# Allow FTP Connection Interfaces
-A INPUT -i wlan0 -p tcp --dport 21 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT
-A INPUT -i enp2s0 -p tcp --dport 21 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT
-A INPUT -i usb0 -p tcp --dport 21 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT

# Allow Samba Connection
-A INPUT -i enp2s0 -p udp -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 --dport 137 -j ACCEPT
-A INPUT -i enp2s0 -p udp -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 --dport 138 -j ACCEPT
-A INPUT -i enp2s0 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 --dport 139 -j ACCEPT
-A INPUT -i enp2s0 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 --dport 445 -j ACCEPT


# Allow All Input Final client -> wlan0 (hotspot) -> lo
-A INPUT -i wlan0 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT

# Another Connection From Wan Drop Logging
-A INPUT -i enp2s0 -p tcp --dport 22 -j LOG --log-prefix "## SSH CONNECTION - DROP ##"
-A INPUT -i enp2s0 -p tcp --dport 80 -j LOG --log-prefix "## HTTP CONNECTION - DROP ##"
-A INPUT -i enp2s0 -p tcp --dport 443 -j LOG --log-prefix "## HTTPS CONNECTION - DROP ##"
-A INPUT -i enp2s0 -p tcp --dport 21 -j LOG --log-prefix "## FTP CONNECTION - DROP ##"
-A INPUT -i enp2s0 -p tcp --dport 3306 -j LOG --log-prefix "## MYSQL CONNECTION - DROP ##"
-A INPUT -i enp2s0 -p tcp --dport 6379 -j LOG --log-prefix "## REDIS CONNECTION - DROP ##"

# Allow Input For Forwarding To Subnet IP
-A INPUT -i enp2s0 -d 192.168.1.1 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT
-A INPUT -i enp2s0 -d 192.168.170.0/24 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT

# Another Connection From Wan drop
-A INPUT -i enp2s0 -p tcp -j LOG --log-prefix "## ALL CONNECTION - DROP ##"
-A INPUT -i enp2s0 -j DROP

# Rules For Ping Connection
#-A FORWARD -i wlan0 -o enp2s0 -p icmp -j DROP

# Forwarding Traffic enp2s0 <-> wlan0
-A FORWARD -i enp2s0 -o wlan0 -m state --state RELATED,NEW,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o enp2s0 -m state --state RELATED,NEW,ESTABLISHED -j ACCEPT

# Forwarding Traffic Wlan0 <-> usb0
-A FORWARD -i usb0 -o wlan0 -m state --state RELATED,NEW,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o usb0 -m state --state RELATED,NEW,ESTABLISHED -j ACCEPT

# Forwarding Traffic enp2s0 <-> enp2s0
-A FORWARD -i enp2s0 -o enp2s0 -m state --state RELATED,NEW,ESTABLISHED -j ACCEPT

-A FORWARD -m state --state INVALID -j DROP

# Rules For SSH Output Traffic
-A OUTPUT -o enp2s0 -p tcp --sport 22 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT
-A OUTPUT -o wlan0 -p tcp --sport 22 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT
-A OUTPUT -o usb0 -p tcp --sport 22 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT

# Allow All Output Connection Fron wlan0
-A OUTPUT -o wlan0 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT

# Allow HTTP Input From WAN in enp2s0
-A OUTPUT -o enp2s0 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o usb0 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state INVALID -j DROP

COMMIT

# Completed on Mon Nov  6 14:55:50 2023

# Generated by iptables-save v1.8.7 on Mon Nov  6 14:55:50 2023
*nat

:PREROUTING ACCEPT [106:19326]
:INPUT ACCEPT [48:2448]
:OUTPUT ACCEPT [47:3080]
:POSTROUTING ACCEPT [0:0]

# Forwarding Port 8082 From Wan To Local Area Network 192.168.1.1 Port 80
-A PREROUTING -i enp2s0 -p tcp --dport 8082 -j DNAT --to-destination 192.168.1.1:80
-A POSTROUTING -i enp2s0 -j MASQUERADE

COMMIT
# Completed on Mon Nov  6 14:55:50 2023
